--- a/xaml_list/xaml_list/App.xaml
+++ b/xaml_list/xaml_list/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Korbit_Status.App"
+    x:Class="xaml_list.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Korbit_Status"
+    xmlns:local="using:xaml_list"
     RequestedTheme="Light">
 
 </Application>
