--- a/xaml_list/xaml_list/final_price/Price_List.xaml
+++ b/xaml_list/xaml_list/final_price/Price_List.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Korbit_Status.MainPage"
+    x:Class="xaml_list.final_price.Price_List"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Korbit_Status"
+    xmlns:local="using:xaml_list.final_price"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
