--- a/xaml_list/xaml_list/MainPage.xaml
+++ b/xaml_list/xaml_list/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:xaml_list"
+    xmlns:local2="using:xaml_list.List"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:UWPToolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -290,10 +291,10 @@
                       Width="1200" Height="200">
                
                 <ListView.ItemTemplate>
-                    <DataTemplate >
+                    <DataTemplate x:DataType="local2:Price_List">
                         <StackPanel Orientation="Horizontal" >
                             <!--코인-->
-                            <TextBlock FontSize="12dp" Width="110dp" Text="{Binding Coin_Name}"></TextBlock>
+                            <TextBlock FontSize="12dp" Width="110dp" x:Phase="1" Text="{x:Bind Coin_Name}"></TextBlock>
 
                             <!--현재가-->
                             <TextBlock FontSize="12dp" Width="120dp" Text="{Binding Last}"></TextBlock>
