현재 상태의 소스를 빌드하면 빌드오류가 나서 빌드 오류 수정함
MainPage.xaml
- ListInvest_Chart width 1460으로 변경, 시간 컬럼이 안나옴

MainPage.xaml.cs
- enum Coins 정의
- Dictionary<Coins, string> 정의
- ObservableCollection<Rootobject>로 변경
- BaseURL 정의
- MainPage() 생성자 실행 코드 -> Loaded로 이동
- GetCoinURL 메소드 추가
- GetListData 메소드 변경
-- 기존 while, delay 방식에서 timer 방식으로
-- 코드 한층 간결화: Coins enum 및 dictionary 사용

--- a/xaml_list/xaml_list/MainPage.xaml
+++ b/xaml_list/xaml_list/MainPage.xaml
@@ -288,13 +288,13 @@
                                   RefreshInvoked="PtrBox_RefreshInvoked">
               -->  
                 <ListView x:Name="ListInvest_Chart" Margin="10,10,10,0" RelativePanel.Below="Kind"
-                      Width="1200" Height="200">
+                      Width="1460" Height="200">
                
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="local2:Price_List">
+                    <DataTemplate>
                         <StackPanel Orientation="Horizontal" >
                             <!--코인-->
-                            <TextBlock FontSize="12dp" Width="110dp" x:Phase="1" Text="{x:Bind Coin_Name}"></TextBlock>
+                            <TextBlock FontSize="12dp" Width="110" Text="{Binding CoinName}"></TextBlock>
 
                             <!--현재가-->
                             <TextBlock FontSize="12dp" Width="120" Text="{Binding last}"></TextBlock>
@@ -315,7 +315,7 @@
                             <TextBlock FontSize="12dp" Width="180" Text="{Binding change}"></TextBlock>
 
                             <!--변동률-->
-                            <TextBlock FontSize="12dp" Width="140dp" Text="{Binding ChangePercent}"></TextBlock>
+                            <TextBlock FontSize="12dp" Width="140" Text="{Binding changePercent}"></TextBlock>
 
                             <!--거래량-->
                             <TextBlock FontSize="12dp" Width="200" Text="{Binding volume}"></TextBlock>
