--- a/xaml_list/xaml_list/MainPage.xaml
+++ b/xaml_list/xaml_list/MainPage.xaml
@@ -7,8 +7,18 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:UWPToolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     mc:Ignorable="d">
+    
+    <Page.DataContext>
+        <local:MainPageViewModel/>
+    </Page.DataContext>
 
+    <interactivity:Interaction.Behaviors>
+        <core:EventTriggerBehavior EventName="Loaded">
+            <core:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+        </core:EventTriggerBehavior>
+    </interactivity:Interaction.Behaviors>
 
     <Canvas Background="#FFF2F2F2">
 
@@ -22,7 +32,7 @@
             </TextBlock>
 
             <!--투자현황 리스트-->
-            <ListView x:Name="ListInvest_Money" Margin="0,30,0,0">
+            <ListView ItemsSource="{Binding Rate}" Margin="0,30,0,0">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -94,7 +104,7 @@
             <TextBlock x:Name="Coin" Text="보유 코인" RelativePanel.Below="KM" FontStyle="Italic"></TextBlock>
 
             <!--보유 코인-->
-            <ListView x:Name="Storage" RelativePanel.Below="Coin" Width="290" Height="95" Margin="3,-1,-3,0">
+            <ListView ItemsSource="{Binding Rate}" RelativePanel.Below="Coin" Width="290" Height="95" Margin="3,-1,-3,0">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
@@ -110,7 +120,7 @@
         <!--입금 출금-->
 
         <!--매수 매수-->
-        <RelativePanel Background="White" Canvas.Left="500" Width="400" Height="200" Canvas.Top="10" >
+        <RelativePanel Background="White" Canvas.Left="500" Width="400" Height="200" Canvas.Top="10">
             <!--매수 코드-->
             <Button x:Name="Buy" Margin="3" Width="50" Height="30" Background="White">
                 <TextBlock Text="매수" Foreground="#E81123" FontSize="13" FontStyle="Oblique"></TextBlock>
@@ -118,28 +128,46 @@
             <TextBlock x:Name="Buy_Disital" RelativePanel.Below="Buy" FontSize="10dp" Text="디지털 자산" ></TextBlock>
 
             <Button x:Name="Buy_Btc" RelativePanel.Below="Buy_Disital"
-                      FontSize="8" Content="Bitconin-BTC" Background="White">
+                      FontSize="8" Content="{Binding SelectedCoin}" Background="White">
                 <!--코인 리스트-->
                 <Button.Flyout>
-                    <MenuFlyout >
+                    <MenuFlyout>
                         <MenuFlyoutItem  x:Name="B_Btc" Width="100" Background="White"  
-                                         FontSize="8" Text="BITCOIN-BTC"
-                                         Click="B_Btc_Click"/>
+                                         FontSize="8" Text="BITCOIN-BTC" Command="{Binding SelectCoinCommand}">
+                            <MenuFlyoutItem.CommandParameter>
+                                <local:Coins>btc_krw</local:Coins>
+                            </MenuFlyoutItem.CommandParameter>
+                        </MenuFlyoutItem>
                         <MenuFlyoutItem  x:Name="B_Btg" Width="100" Background="White"  
-                                         FontSize="8" Text="BITCOINGOLD-BTG"
-                                         Click="B_Btg_Click"/>
+                                         FontSize="8" Text="BITCOINGOLD-BTG" Command="{Binding SelectCoinCommand}">
+                            <MenuFlyoutItem.CommandParameter>
+                                <local:Coins>btg_krw</local:Coins>
+                            </MenuFlyoutItem.CommandParameter>
+                        </MenuFlyoutItem>
                         <MenuFlyoutItem  x:Name="B_Bth" Width="100" Background="White"
-                                         FontSize="8" Text="BITCOINCASH-BTH"
-                                         Click="B_Bth_Click"/>
+                                         FontSize="8" Text="BITCOINCASH-BTH" Command="{Binding SelectCoinCommand}">
+                            <MenuFlyoutItem.CommandParameter>
+                                <local:Coins>bth_krw</local:Coins>
+                            </MenuFlyoutItem.CommandParameter>
+                        </MenuFlyoutItem>
                         <MenuFlyoutItem  x:Name="B_Eth" Width="100" Background="White" 
-                                         FontSize="8" Text="ETHEREUM-ETH"
-                                         Click="B_Eth_Click"/>
+                                         FontSize="8" Text="ETHEREUM-ETH" Command="{Binding SelectCoinCommand}">
+                            <MenuFlyoutItem.CommandParameter>
+                                <local:Coins>eth_krw</local:Coins>
+                            </MenuFlyoutItem.CommandParameter>
+                        </MenuFlyoutItem>
                         <MenuFlyoutItem  x:Name="B_Etc" Width="100" Background="White" 
-                                         FontSize="7" Text="ETHEREUM_CLASS-ETC"
-                                         Click="B_Etc_Click"/>
+                                         FontSize="7" Text="ETHEREUM_CLASS-ETC" Command="{Binding SelectCoinCommand}">
+                            <MenuFlyoutItem.CommandParameter>
+                                <local:Coins>etc_krw</local:Coins>
+                            </MenuFlyoutItem.CommandParameter>
+                        </MenuFlyoutItem>
                         <MenuFlyoutItem  x:Name="B_Xrp" Width="100" Background="White" 
-                                         FontSize="8" Text="REPLE-XRP"
-                                         Click="B_Xrp_Click"/>
+                                         FontSize="8" Text="REPLE-XRP" Command="{Binding SelectCoinCommand}">
+                            <MenuFlyoutItem.CommandParameter>
+                                <local:Coins>xrp_krw</local:Coins>
+                            </MenuFlyoutItem.CommandParameter>
+                        </MenuFlyoutItem>
                     </MenuFlyout>
                 </Button.Flyout>
             </Button>
@@ -150,10 +178,10 @@
 
             <!--현재 매수가 표시-->
             <TextBlock x:Name="B_O" RelativePanel.Below="B_Order" Margin="9,0,0,0"
-                     HorizontalAlignment="Center" FontSize="10" >
+                     HorizontalAlignment="Left" FontSize="10" Text="{Binding BuyingLast}" Width="70">
             </TextBlock>
             
-            <TextBlock RelativePanel.Below="B_Order" RelativePanel.RightOf="B_O"  Margin="6"
+            <TextBlock RelativePanel.Below="B_Order" RelativePanel.RightOf="B_O"  Margin="5,0,0,0"
                        Text="KRW" FontSize="10"></TextBlock>
 
             <TextBlock x:Name="B_Order_Rate" Text="주문량"
@@ -218,7 +246,7 @@
 
             <!--현재 매도가 표시-->
             <TextBlock x:Name="S_O" RelativePanel.Below="S_Order" RelativePanel.AlignRightWithPanel="True"
-                       FontSize="10" Margin="0, 0, 30, 0"/>
+                       FontSize="10" Margin="0, 0, 30, 0" Text="{Binding SellLast}"/>
 
             <TextBlock RelativePanel.Below="S_Order" 
                        Text="KRW" FontSize="10" RelativePanel.AlignRightWithPanel="True">
@@ -238,7 +266,7 @@
             <TextBlock x:Name="S_Expected_Spend" Text="예상수령액" FontSize="6" FontStyle="Italic"
                        RelativePanel.Below="B_OR" RelativePanel.AlignRightWithPanel="True"></TextBlock>
             <!--예상-->
-            <TextBlock x:Name="S_ES" RelativePanel.Below="S_Expected_Spend" Text="{Binding}" FontSize="10" Margin="0, 6, 30, 0"
+            <TextBlock x:Name="S_ES" RelativePanel.Below="S_Expected_Spend" Text="" FontSize="10" Margin="0, 6, 30, 0"
                      HorizontalAlignment="Center" RelativePanel.AlignRightWithPanel="True">
             </TextBlock>
             <TextBlock RelativePanel.Below="S_Expected_Spend"  Margin="6" 
@@ -260,7 +288,7 @@
 
             <!--체결 시간-->
             <TextBlock  x:Name="Time_Block" RelativePanel.AlignRightWithPanel="True"
-                        RelativePanel.Below="Chart" Text="{x:Bind LiveTime, Mode=OneWay}">
+                        RelativePanel.Below="Chart" Text="{Binding LiveTime, Mode=OneWay}">
             </TextBlock>
 
             <!--종목-->
@@ -287,8 +315,7 @@
             <ptr:PullToRefreshBox x:Name="PtrBox"
                                   RefreshInvoked="PtrBox_RefreshInvoked">
               -->  
-                <ListView x:Name="ListInvest_Chart" Margin="10,10,10,0" RelativePanel.Below="Kind"
-                      Width="1460" Height="200">
+                <ListView ItemsSource="{Binding Price}" Margin="10,10,10,0" RelativePanel.Below="Kind" Width="1460" Height="200">
                
                 <ListView.ItemTemplate>
                     <DataTemplate>
